--- a/web/ui/css/dashboard.css
+++ b/web/ui/css/dashboard.css
@@ -151,23 +151,43 @@ div#new-query-container.inputs-active #new-query-name-input {
 }
 
 /* rules for the analytics-dropdown */
-img.analytics-loading {
+img.analytics-loading, 
+img.chart-loading {
   display: none;
   margin-left: auto;
   margin-right: auto;
   margin-top: 89px;
 }
 
-div.analyzing img.analytics-loading {
+div.analyzing img.analytics-loading, 
+div.analyzing img.chart-loading {
   display: block; 
 }
 
-div.analyzing.analytics-loaded img.analytics-loading {
+div.analyzing.analytics-loaded img.analytics-loading,
+div.analyzing.chart-loaded img.chart-loading {
   display: none;
+}
+
+div.metric div.numeric-analytics, 
+div.metric div.chart {
+  width: 448px;
+  display: inline;
+  height: 100%;
+}
+
+div.metric div.numeric-analytics {
+  float: left;
+  border-right: 1px solid;
+}
+
+div.metric div.chart {
+  float: right;
 }
 
 div.metric div.analytics-container {
   display: none;
+  height: 400px;
   margin-top: 100px;
   border-top: 1px solid;
   overflow: hidden;
@@ -175,7 +195,6 @@ div.metric div.analytics-container {
 
 div.metric.analyzing div.analytics-container {
   display: block;
-  height: 400px;
   width: 100%;
 }
 
@@ -186,7 +205,6 @@ div.metric div.analytics-container h2 {
 
 div.metric table.analytics-table {
   margin-top: 10px;
-  width: 50%;
 }
 
 div.metric table.analytics-table td {
