--- a/web/ui/css/lt-common.css
+++ b/web/ui/css/lt-common.css
@@ -1,5 +1,36 @@
+@font-face {
+  font-family: 'Chunk';
+  src: url('/fonts/Chunk.otf');
+}
+
+@font-face {
+  font-family: 'Ostrich-Black';
+  src: url('/fonts/ostrich-black.ttf');
+}
+
+@font-face {
+  font-family: 'Ostrich-Regular';
+  src: url('/fonts/ostrich-regular.ttf');
+}
+
+@font-face {
+  font-family: 'Ostrich-Bold';
+  src: url('/fonts/ostrich-bold.ttf');
+}
+
+@font-face {
+  font-family: 'Ostrich-Dashed';
+  src: url('/fonts/ostrich-dashed.ttf');
+}
+
+@font-face {
+  font-family: 'Ostrich-Rounded';
+  src: url('/fonts/ostrich-rounded.ttf');
+}
+
 html {
   background-color: #f8f8ff;
+  font-family: 'Ostrich-Rounded';
 }
 
 #lt-base {
@@ -15,6 +46,7 @@ html {
 
 h1 {
   font-size: 30pt; 
+  font-family: 'Ostrich-Bold';
 }
 
 h2 {
