--- a/web/ui/css/home.css
+++ b/web/ui/css/home.css
@@ -79,3 +79,61 @@
   opacity: 0.2;
   display: none;
 }
+
+
+/* styling for the faux-dashboard page look */
+.metric {
+  background-color: white;
+  border: 1px solid;
+  border-radius: 5px;
+  width: 900px;
+  height: 100px;
+  margin-bottom: 33px;
+}
+
+div.metric-name-container {
+  float: left;
+  display: inline;
+  width: 300px;
+  height: 100px;
+}
+
+h3.metric-name {
+  font-size: 30pt;
+  text-align: center;
+  margin-top: 30px;
+  margin-left: auto;
+}
+
+div.metric-snapshot {
+  float: left;
+  display: inline;
+  width: 300px;
+  height: 100px;
+}
+
+div.metric-snapshot p {
+  text-align: center;
+  margin-top: 20px;
+}
+
+div.metric-options {
+  float: right;
+  display: inline;
+  width: 294px;
+  height: 100px;
+}
+
+div.metric-options a {
+  font-size: 16pt;
+  margin-top: 9px;
+  display: block;
+  text-align: center;
+}
+
+div.metric-options a.query-delete-confirm-button, 
+div.metric a.query-edit-submit-button, 
+div.metric .edit-field {
+  display: none;
+}
+
