On the dashboard, there is now a direct link from the analytics-dropdown to the full analytics page.
Really, we should just expose more analytics in the dropdown, preferably
the interesting ones, but this is a stop-gap for now.

--- a/web/ui/css/dashboard.css
+++ b/web/ui/css/dashboard.css
@@ -224,3 +224,14 @@ div.metric table.analytics-table {
 div.metric table.analytics-table td {
   border: none;
 }
+
+div.metric div.analytics-container p {
+  text-align: center;
+  margin-top: 20px;
+  font-size: 20pt;
+  display: none;
+}
+
+div.metric.analytics-loaded div.analytics-container p {
+  display: block;
+}
