Allow the user to choose roughly when queries are sent to them, any subset of {morning, afternoon, evening}.

--- a/web/ui/css/dashboard.css
+++ b/web/ui/css/dashboard.css
@@ -75,12 +75,14 @@ div.metric input.edit-name {
   text-align: center;
 }
 
-div.edit-format-container {
+div.edit-format-container,
+div.edit-time-container {
   margin-top: 5px;
   margin-bottom: 20px;
 }
 
-div.edit-format-container p {
+div.edit-format-container p,
+div.edit-time-container p {
   text-align: center;
   font-size: larger;
   margin-left: auto;
