--- a/web/ui/css/account.css
+++ b/web/ui/css/account.css
@@ -21,6 +21,7 @@
   background-color: white;
   border: 1px solid;
   border-radius: 5px;
+  -moz-border-radius: 5px;
   font-size: 24pt;
   padding: 50px;
   display: none;
