--- a/web/ui/css/intro.css
+++ b/web/ui/css/intro.css
@@ -4,6 +4,7 @@ div.point {
   height: 500px;
   border: 1px solid black;
   border-radius: 5px;
+  -moz-border-radius: 5px;
   margin-bottom: 50px;
   margin-top: 75px;
   font-family: 'Ostrich-Rounded';
@@ -58,6 +59,7 @@ div.screenshot-container {
   width: 498px;
   border: 1px solid black;
   border-radius: 5px;
+  -moz-border-radius: 5px;
   margin-left: 5px;
   margin-top: 5px;
 }
@@ -66,6 +68,7 @@ div.screenshot-container {
   width: 400px;
   border: 1px solid black;
   border-radius: 5px;
+  -moz-border-radius: 5px;
   margin-left: 5px;
   margin-top: 5px;
 }
@@ -74,6 +77,7 @@ div.screenshot-container {
   width: 500px;
   border: 1px solid black;
   border-radius: 5px;
+  -moz-border-radius: 5px;
   margin-left: 5px;
   margin-top: 5px;
 }
