--- a/web/ui/css/new_metric_autocomplete.css
+++ b/web/ui/css/new_metric_autocomplete.css
@@ -2,6 +2,7 @@ ul.ui-autocomplete {
   background: white;
   border: 1px solid;
   border-radius: 5px;
+  -moz-border-radius: 5px;
   width: 700px;
 }
 
